--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,10 @@
 @font-face {
   font-family: "icomoon";
-  src: url("../fonts/icomoon/icomoon.eot?srf3rx");
-  src: url("../fonts/icomoon/icomoon.eot?srf3rx#iefix")
-      format("embedded-opentype"),
-    url("../fonts/icomoon/icomoon.ttf?srf3rx") format("truetype"),
-    url("../fonts/icomoon/icomoon.woff?srf3rx") format("woff"),
-    url("../fonts/icomoon/icomoon.svg?srf3rx#icomoon") format("svg");
+  src: url("./icomoon/icomoon.eot?srf3rx");
+  src: url("./icomoon/icomoon.eot?srf3rx#iefix") format("embedded-opentype"),
+    url("./icomoon/icomoon.ttf?srf3rx") format("truetype"),
+    url("./icomoon/icomoon.woff?srf3rx") format("woff"),
+    url("./icomoon/icomoon.svg?srf3rx#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
